--- a/static/languages/en.json
+++ b/static/languages/en.json
@@ -1,13 +1,13 @@
 {
-  "heading": "Carbon footprint of electricity generation in all EU countries",
-  "subheading": "Greenhouse gas emission (GHG) intensity per member states in 2020, in carbon dioxide equivalent per kilowatt hour",
+  "heading": "How high is the carbon footprint of electricity generation in all EU countries?",
+  "subheading": "As of 2022 in the EU27 the Greenhouse gas emission (GHG) intensity in carbon dioxide equivalent per kilowatt hour was 258. This is an increase of 13.65% to 2020.",
   "legend1": "No data available",
   "tooltip1": "g CO2e/kW h",
   "textSourceDescription": "Source",
   "textSource": "EEA: https://www.eea.europa.eu/",
   "textNoteDescription": "Note",
-  "textNote": "European Environment Information and Observation Network (Eionet)",
+  "textNote": "European Environment Agency",
   "textDataAccess": "Access the data",
-  "linkDataAccess": "https://ec.europa.eu/eurostat/databrowser/view/tps00005/default/table?lang=en",
+  "linkDataAccess": "https://www.eea.europa.eu/en/analysis/indicators/greenhouse-gas-emission-intensity-of-1?activeAccordion=ecdb3bcf-bbe9-4978-b5cf-0b136399d9f8",
   "textCountryClick": "Click for more info"
 }
