--- a/static/languages/nl.json
+++ b/static/languages/nl.json
@@ -1,13 +1,13 @@
 {
-  "heading": "CO2-voetafdruk van elektriciteitsopwekking in alle EU-landen",
-  "subheading": "Broeikasgasemissie-intensiteit (BKG) per lidstaat in 2020, in kooldioxide-equivalent per kilowattuur",
+  "heading": "Hoe hoog is de CO2-voetafdruk van de elektriciteitsopwekking in alle EU-landen?",
+  "subheading": "Vanaf 2022 bedroeg de intensiteit van de broeikasgasemissie (BKG) in kooldioxide-equivalent per kilowattuur in de EU27 258. Dit is een stijging van 13,65% tot 2020.",
   "legend1": "Geen gegevens beschikbaar",
   "tooltip1": "g CO2e/kW h",
   "textSourceDescription": "Bron",
   "textSource": "EER: https://www.eea.europa.eu/",
   "textNoteDescription": "Opmerking",
-  "textNote": "Europees milieu-informatie- en observatienetwerk (Eionet)",
+  "textNote": "Europees Milieuagentschap",
   "textDataAccess": "Toegang tot de gegevens",
-  "linkDataAccess": "https://ec.europa.eu/eurostat/databrowser/view/tps00005/default/table?lang=en",
-  "textCountryClick": "Klik voor meer info"
+  "linkDataAccess": "https://www.eea.europa.eu/en/analysis/indicators/greenhouse-gas-emission-intensity-of-1?activeAccordion=ecdb3bcf-bbe9-4978-b5cf-0b136399d9f8",
+  "textCountryClick": "Klik voor meer informatie"
 }
