--- a/static/languages/pt.json
+++ b/static/languages/pt.json
@@ -1,13 +1,13 @@
 {
-  "heading": "Pegada de carbono da geração de eletricidade em todos os países da UE",
-  "subheading": "Intensidade de emissão de gases de efeito estufa (GEE) por estados membros em 2020, em equivalente de dióxido de carbono por quilowatt-hora",
-  "legend1": "Nenhum dado disponível",
-  "tooltip1": "g CO2e/kWh",
+  "heading": "Qual é a pegada de carbono da produção de eletricidade em todos os países da UE?",
+  "subheading": "Em 2022, na UE27, a intensidade das emissões de gases com efeito de estufa (GEE) em equivalente de dióxido de carbono por quilowatt-hora era de 258. Isto representa um aumento de 13,65% até 2020.",
+  "legend1": "Não há dados disponíveis",
+  "tooltip1": "g CO2e/kW·h",
   "textSourceDescription": "Fonte",
   "textSource": "EEE: https://www.eea.europa.eu/",
   "textNoteDescription": "Observação",
-  "textNote": "Rede Europeia de Informação e Observação do Ambiente (Eionet)",
+  "textNote": "Agência Europeia do Ambiente",
   "textDataAccess": "Acesse os dados",
-  "linkDataAccess": "https://ec.europa.eu/eurostat/databrowser/view/tps00005/default/table?lang=en",
+  "linkDataAccess": "https://www.eea.europa.eu/en/análise/indicadores/greenhouse-gas-emission-intensity-of-1?activeAccordion=ecdb3bcf-bbe9-4978-b5cf-0b136399d9f8",
   "textCountryClick": "Clique para mais informações"
 }
