--- a/static/languages/sk.json
+++ b/static/languages/sk.json
@@ -1,13 +1,13 @@
 {
-  "heading": "Uhlíková stopa výroby elektriny vo všetkých krajinách EÚ",
-  "subheading": "Intenzita emisií skleníkových plynov (GHG) na členské štáty v roku 2020 v ekvivalente oxidu uhličitého na kilowatthodinu",
+  "heading": "Aká vysoká je uhlíková stopa výroby elektriny vo všetkých krajinách EÚ?",
+  "subheading": "Od roku 2022 bola intenzita emisií skleníkových plynov (GHG) v ekvivalente oxidu uhličitého na kilowatthodinu 258. Do roku 2020 to predstavuje nárast o 13,65 %.",
   "legend1": "Nie sú k dispozícii žiadne údaje",
   "tooltip1": "g CO2e/kW h",
   "textSourceDescription": "Zdroj",
   "textSource": "EHP: https://www.eea.europa.eu/",
   "textNoteDescription": "Poznámka",
-  "textNote": "Európska environmentálna informačná a pozorovacia sieť (Eionet)",
+  "textNote": "Európska environmentálna agentúra",
   "textDataAccess": "Prístup k údajom",
-  "linkDataAccess": "https://ec.europa.eu/eurostat/databrowser/view/tps00005/default/table?lang=sk",
+  "linkDataAccess": "https://www.eea.europa.eu/en/analysis/indicators/greenhouse-gas-emission-intensity-of-1?activeAccordion=ecdb3bcf-bbe9-4978-b5cf-0b136399d9f8",
   "textCountryClick": "Kliknite pre viac informácií"
 }
